<resources>
    <string name="app_name">Rickshaw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_Home">Home</string>
    <string name="nav_tripshistory">Trips History</string>
    <string name="nav_Earnings">Earnings</string>
    <string name="nav_PaymentDetails">Current Balance Statement</string>
    <string name="nav_ReferEarn">Refer and Earn</string>
    <string name="nav_AccountSetting">Account Settings</string>
    <string name="nav_incentiveAndNoti"><![CDATA[Incentive & Notification]]></string>
    <string name="nav_report">Report Issues</string>
    <string name="nav_about_us">About</string>
    <string name="nav_help">Help</string>
    <string name="nav_signout">Sign Out</string>
    <string name="nav_legal">Legal</string>
    <string name="api_key">AIzaSyBgxV8HZG2nmFXHb5iYHHxfeJJCsFGZqPA</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Trips History</item>
        <item>Earnings</item>
        <item>Current Balance Statement</item>
        <item>Refer and Earn</item>
        <item>Account Settings</item>
        <item><![CDATA[Incentive & Notification]]></item>
        <item>Report Issues</item>
        <item>About</item>
        <item>Help</item>
        <item>Sign Out</item>
        <item>Legal</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal">Legal</string>
    <string name="nameh">नाम</string>
    <string name="locationh">स्थान</string>
    <string name="mobileNumberh">मोबाइल नंबर</string>
    <string name="passwordh">पासवर्ड</string>
    <string name="confpasswordh">पासवर्ड की पुष्टि कीजिये</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="noGps">Please , Turn On Your Gps</string>
    <string name="otp">Please, Enter OTP Number</string>
    <string name="cantFindLoc">Can not found your current location</string>
    <string name="cantFindlatlong">Can not find location</string>
    <string name="comingsoon">Feature Launching Soon!</string>
    <string name="clicktoadd">Click To Add Photo</string>
    <string name="selectLang">Please,Select Language</string>
    <string name="selectedLang">Language Selected</string>
    <string name="selectImg">Please , Select Image</string>
    <string name="mobileno">MOBILE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="LOGIN">LOGIN</string>
    <string name="signUp">SIGN UP</string>
    <string name="donthavaccount">Don\'t have an account|</string>
    <string name="name">Name</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="vehicleno">Vehicle Number</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="accepttermsignup"> Accept Terms And Conditions</string>
    <string name="next">NEXT</string>
    <string name="plzuploaddoc">Please Upload Your Personal Documents</string>
    <string name="plzuploadpersonldoc">Please Upload Your Vehicle Documents</string>
    <string name="drivinglicense">Driving License</string>
    <string name="aadharcard">Fitness Certificate</string>
    <string name="profilepic">Profile Photo</string>
    <string name="bankdetails">Bank Details</string>
    <string name="vehiclepermit">Vehicle Permit</string>
    <string name="vehicleinsurnaceno">Vehicle Insurance</string>
    <string name="cancel">Cancel</string>
    <string name="continue1">Continue</string>
    <string name="fixedrout">Fixed Route</string>
    <string name="plzacceptterms">Please, Accept Terms And Conditions</string>
    <string name="dynamicLocation">Dynamic Route</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="confirm_rickshw">Confirm Rickshaw</string>
    <string name="fare">Fare</string>
    <string name="doyousignout">Do you want to Sign Out?</string>
    <string name="exit">Exit</string>
    <string name="doyouuwanttoexit">Do you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="documents">Documents</string>
    <string name="languageSetting">Language Settings</string>
    <string name="sendyourinvitecode">Send Your Invite Code To Friends</string>
    <string name="shareyourinvitecode_btn">Share Your Invite Code</string>
    <string name="yourinvitecode">Your Invite Code</string>
    <string name="makeupto_terms">Make upto ₹50 for each new driver you invite. Terms apply</string>
    <string name="gettingyourlocation">Getting Your Location...</string>
    <string name="termsandcondition">Terms And Conditions</string>
    <string name="loging_msg">Logging in...</string>
    <string name="networkproblem">Network Problem,please try again</string>
    <string name="grant">Grant</string>
    <string name="mytrips">My Trips</string>
    <string name="todaysEarning">Today\'s Earnings</string>
    <string name="editprofile">Edit Profile</string>
    <string name="changepass">CHANGE PASSWORD</string>
    <string name="fetchingdata">Fetching Profile Data...</string>
    <string name="updateprofile">Updating Profile Data...</string>
    <string name="loading">Loading...</string>
    <string name="drivinglicenseNumber">License Number</string>
    <string name="aadharcardNumber">Fitness Certificate Number</string>
    <string name="vehiclepermitNumber">Vehicle Permit Number</string>
    <string name="vehicleinsurnacenumber">Vehicle Insurance Number</string>
    <string name="makesuerelicense">Make Sure License image is Readable</string>
    <string name="makesureaadhar">Make Sure Fitness Certificate Image is Readable</string>
    <string name="makesurevehiper">Make Sure Vehicle Permit Number image is Readable</string>
    <string name="makesurevehiinsu">Make Sure Vehicle Insurance Number image is Readable</string>
    <string name="takepicvi">Take a Photo of your Vehicle Insurance Number</string>
    <string name="takepicvp">Take a Photo of your Vehicle Permit Number</string>
    <string name="takepicac">Take a Photo of your Health Insurance</string>
    <string name="takepicdl">Take a Photo of your Driving License</string>
    <string name="plzenterdl">Please,Enter Driving License Number</string>
    <string name="plzenterdlExpiryDate">Please,Enter Expiry Date</string>
    <string name="plzentervi">Please,Enter Vehicle Insurance Number</string>
    <string name="plzentervp">Please,Enter Vehicle Permit Number</string>
    <string name="plzenterac">Please, Enter Fitness Certificate Number</string>
    <string name="choosefiletoupload">Choose File to Upload..</string>
    <string name="takephoto">Take Photo</string>
    <string name="choosefromgallary">Choose from Gallery</string>
    <string name="addphoto">Add Photo!</string>
    <string name="Uploading">Uploading...</string>
    <string name="retake">Retake</string>
    <string name="save">Save</string>
    <string name="accountnumber">Account Number</string>
    <string name="makesurebankdetails">Make Sure Bank Details is Readable</string>
    <string name="takephotobankacc">Take a Photo of your Passbook/Cancelled Cheque</string>
    <string name="plzenterbankac">Please,Enter Bank Account Number</string>
    <string name="plzenterifsc">Please,Enter IFSC Code</string>
    <string name="uploading">Uploading...</string>
    <string name="uploadingImage">Uploading Image...</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="takeprofilephoto">Take a Profile Photo</string>
    <string name="share_using">share</string>
    <string name="navigation">Navigation</string>
    <string name="update_application">Updated app available!</string>
    <string name="update_app_msg">This  Rickshaw application is old. Please, update new version from Play Store.</string>
    <string name="Update">Update</string>
    <string name="tripIdTitle">Trip Id</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="bill_details">Bill Details</string>
    <string name="ridecharges">Ride Charges</string>
    <string name="fees">Fees</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="totalbill">Total Bill</string>
    <string name="payment">Payment</string>
    <string name="KMS">KMS</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="EndTrip">End Trip</string>
    <string name="customerdetail">Customer Details</string>
    <string name="startRide">Start Ride</string>
    <string name="entermobileno">Enter Mobile Number</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="enterotpcode">Enter your OTP code</string>
    <string name="submit">Submit</string>
    <string name="oldpassword">Old Password*</string>
    <string name="newpassword">New Password*</string>
    <string name="reenterpassword">Re-enter Password*</string>
    <string name="change">CHANGE</string>
    <string name="passowrdisnotmatching">Password is not matching</string>
    <string name="enterpasswordshould">Entered password should be more than 8 characters</string>
    <string name="changepassword_title">Change Password</string>
    <string name="pleasefillfield">Please fill all fields</string>
    <string name="pleaseenteroldpass">Please enter old password</string>
    <string name="pleaseenternewpass">Please enter new password</string>
    <string name="pleaseenterrenter">Please enter re-enter password</string>
    <string name="areuyousurechangepass">Are you sure you want to change password?</string>
    <string name="No">No</string>
    <string name="newpassnotmatchreenterpass">New Password does not match with Re-enter Password</string>
    <string name="changingpassword">Changing Password......</string>
    <string name="resendingOtp">resending OTP....</string>
    <string name="doyouwanttoresendotp">Do you want to resend OTP?</string>
    <string name="ridesummary_title">Ride Summary</string>
    <string name="totalAmount">Total Amount</string>
    <string name="totaldistance">Total Distance:</string>
    <string name="discount">Discount:</string>
    <string name="paybleamount">PAYABLE AMOUNT</string>
    <string name="paymentdone">PAYMENT DONE</string>
    <string name="amountpaid">Amount Paid:</string>
    <string name="done">Done</string>
    <string name="paymentmode">Payment Mode?</string>
    <string name="pleaseselecetpaymentmode">Please Select Your Payment Mode?</string>
    <string name="ok">OK</string>
    <string name="makingpaymentpleasewait">Making Payment..Please, wait..</string>
    <string name="kilometer">Kilometer</string>
    <string name="codeversion">vs </string>
    <string name="trips">Trips</string>
    <string name="pleaseselectcity">Please, Select City</string>
    <string name="pleaseaccepttermsandcondition">Please , Accept Terms and Conditions</string>
    <string name="gettingOTP">Getting OTP...</string>
    <string name="verifingotp_load">Verifying OTP...</string>
    <string name="signingUp">Signing up...</string>
    <string name="mobilenumbershouldbe">Mobile number should be 10 digit number</string>
    <string name="forgetPassword">Forgot Password</string>
    <string name="enteryourquery">Enter Your Query</string>
    <string name="clear">Clear</string>
</resources>