<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="20dp"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical">

    <TextView
        android:fontFamily="serif"
        android:layout_marginLeft="5dp"
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendyourinvitecode"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="10dp"
        />

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/gift"
            />

        <TextView
            android:textIsSelectable="true"
            android:fontFamily="serif"
            android:layout_marginLeft="5dp"
            android:id="@+id/txt1"
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/colorGreen"
            android:layout_marginTop="10dp"
            />


        <TextView
            android:fontFamily="serif"
            android:layout_marginLeft="5dp"
            android:id="@+id/txt2"
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourinvitecode"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/colorGrey"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:fontFamily="serif"
            android:layout_marginLeft="5dp"
            android:id="@+id/txt3"
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makeupto_terms"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="30dp"
            />
        <Button
            android:fontFamily="serif"
            android:id="@+id/btnshare"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:text="@string/shareyourinvitecode_btn"
            android:textColor="@color/colorWhite"
            />

    </LinearLayout>
</ScrollView>

</LinearLayout>
</LinearLayout>