<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <EditText

            android:id="@+id/edt_query"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="4"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:hint="@string/enteryourquery"
            android:fontFamily="serif"
        />

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGrey"
            android:text="@string/clear"
            android:fontFamily="serif"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:text="@string/save"
            android:fontFamily="serif"
            />

        </LinearLayout>


    <RelativeLayout
        android:layout_marginTop="5dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:background="@color/colorTripBillGrey"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/AppTheme.GreenAccent"
            />



    </RelativeLayout>


</LinearLayout>


</LinearLayout>