<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:fontFamily="serif"
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>



    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""

            android:textColor="@color/colorBlack"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/edtotp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:inputType="number"
            android:fontFamily="serif"
            android:maxLength="4"
            android:hint="@string/enterotpcode"
            android:gravity="center"
            android:background="@drawable/rounded_edittext"
            />

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:fontFamily="serif"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/colorGrey"
                android:text="@string/cancel"
                android:layout_margin="10dp"
                android:drawablePadding="50dip"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="#ffffff" />


        <Button
            android:fontFamily="serif"
            android:layout_gravity="center_vertical"
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorGreen"
            android:text="@string/submit"
            android:layout_margin="10dp"
            android:drawablePadding="50dip"
            android:padding="5dp"
            android:gravity="center"
            android:textColor="#ffffff" />


        </LinearLayout>
    </LinearLayout>



</LinearLayout>