<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
   >-->


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<!--<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">-->

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:adjustViewBounds="true"
        android:background="@drawable/login_image"
        >
        android:background="@mipmap/login_image1"

        <LinearLayout
            android:paddingTop="50dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:background="@drawable/rickshaw_new_logo"
                android:layout_gravity="center_horizontal"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/mobile"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/edtUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="14sp"
                        android:fontFamily="serif"
                        android:hint="@string/mobileno" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@mipmap/ic_lock"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="8dp">
                    <EditText android:id="@+id/edtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        android:fontFamily="serif"
                        android:hint="@string/password"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:id="@+id/linear_forgetPassword"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:id="@+id/linkForgetPass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forgetPassword"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/colorGreen"
                    android:textSize="12dip"/>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorGreen"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:text="@string/LOGIN"/>

            <LinearLayout
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="serif"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/donthavaccount"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textSize="16dip"/>

                <TextView
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:id="@+id/linkSignup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signUp"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/colorGreen"
                    android:textSize="16dip"/>

            </LinearLayout>



        </LinearLayout>


        <!--<ImageView
            android:layout_alignParentBottom="true"
            android:background="@drawable/building"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

    </LinearLayout>

    <!--<ImageView
        android:clickable="false"
        android:layout_alignParentBottom="true"
        android:background="@drawable/building"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->


</FrameLayout>

<!--</RelativeLayout>-->
   <!-- </ScrollView>-->
