<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"  >


    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <!--<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="18sp"
        android:text="Forgot Password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary" />-->

    <EditText
        android:fontFamily="serif"
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="#ededed"
        android:ems="10"
        android:maxLength="10"
        android:textSize="15sp"
        android:hint="@string/entermobileno"
        android:inputType="number"
        android:paddingLeft="15dp"
        android:textColor="#000000"
        >
    </EditText>

    <!-- <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
         android:background="#c52d2f"
         android:text="Submit"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFFFFF"
         android:textSize="16dp" />-->

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <Button
                android:fontFamily="serif"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorGrey"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_cancel"
                />
            <Button
                android:fontFamily="serif"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimary"
                android:id="@+id/btn_submit"

                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/btn_cancel"
                />



        </RelativeLayout>



    </LinearLayout>

</LinearLayout>